syntax = "proto3";

package calculator;

message SumRequest {
  sint32 a = 1;
  sint32 b = 2;
}

message SumResponse { sint32 result = 1; }

message PrimeNumberDecompositionRequest { uint32 number = 1; }

message PrimeNumberDecompositionResponse { uint32 prime_factor = 1; }

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse) {};
  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest)
      returns (stream PrimeNumberDecompositionResponse) {};
}
